# SEDSnet

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.py  build.rs  publish_crates.py  pyproject.toml  submodule_update_no_stash.py  subtree_update_no_stash.py  telemetry_config_editor.py
.github/workflows/: ci.yaml  release.yml
C-Headers/: sedsnet.h  sedsprintf.h
benches/: packet_paths.rs  route_selection_paths.rs  router_system_paths.rs
c-example-code/: CMakeLists.txt
c-example-code/include/: telemetry.h
c-example-code/src/: load_balancing_example.c  main.c  managed_variables_e2e_example.c  managed_variables_e2e_example.cpp  telemetry.c  timesync_example.c
c-system-test/: CMakeLists.txt
c-system-test/include/: telemetry_sim.h
c-system-test/src/: board_topology_timesync_test.c  main.c  multi_endpoint_topology_test.c  runtime_schema_test.c  telemetry_sim.c
c-wrapper/: sedsnet_c_wrapper.c  sedsnet_c_wrapper.h  sedsnet_cpp_wrapper.hpp  sedsprintf_c_wrapper.c  sedsprintf_c_wrapper.h  sedsprintf_cpp_wrapper.hpp
docs/: README.md  sync_wiki.py
docs/wiki/: Build-and-Configure.md  Changelogs.md  Concepts.md  Examples.md  Glossary-and-Abbreviations.md  Home.md  Overview.md  Release-Checklist.md  Technical-Architecture.md  Technical-Bindings-and-FFI.md  Technical-Discovery-and-Internal-Formats.md  Technical-Index.md  Technical-Packet-Details.md  Technical-Queues-and-Memory.md  Technical-Router-Details.md  Technical-Telemetry-Schema.md  Technical-Wire-Format.md  Testing.md  Time-Sync.md  Troubleshooting.md  Usage-C-Cpp.md  Usage-Python.md  Usage-Rust.md
header_templates/: sedsnet.pyi.txt  sedsprintf_rs.pyi.txt
python-example/: load_balancing_example.py  main.py  managed_variables_e2e_example.py  p2p_service_example.py  schema_helpers.py  system_suite.py  test.py  timesync_example.py  typed_routing_example.py
python-files/sedsnet/: __init__.py  sedsnet.pyi
rtos-example-code/: freertos_timesync.c  threadx_telemetry.c  threadx_timesync.c
rust-example-code/: README.md  load_balancing_example.rs  managed_variables_e2e_example.rs  multinode_sim_example.rs  queue_timeout_example.rs  relay_example.rs  reliable_example.rs  runtime_config_example.rs  timesync_example.rs  typed_routing_example.rs
sedsnet_macros/: Cargo.toml
sedsnet_macros/src/: lib.rs
src/: c_api.rs  config.rs  crypto.rs  diagnostics.rs  discovery.rs  lib.rs  macros.rs  packet.rs  python_api.rs  relay.rs  router.rs  serialize.rs  tests.rs  timesync.rs  wire_format.rs
tests/: test_python_current_api.py  test_python_system_suite.py  test_python_topology_export.py  test_telemetry_config_editor.py
tests/rust-system-test/: compression_memory_pool_test.rs  full_system_test.rs  reliable_drop_test.rs  rust_system_test.rs  single_threaded_test.rs  timesync_system_test.rs
