[package]
name = "SEDSnet"
version = "4.0.2"
edition = "2024"
build = "build.rs"
authors = ["Rylan Meilutis <rylan@rylanswebsite.com>"]
description = "A memory safe, no_std-capable networking stack with routing, discovery, reliability, and Rust/C/Python bindings."
license = "GPL-2.0-only"
repository = "https://github.com/rylan-meilutis/SEDSnet"
documentation = "https://docs.rs/SEDSnet"
keywords = ["telemetry", "networking", "no_std", "embedded", "pyo3"]
categories = ["embedded", "no-std"]
readme = "README.md"

[lib]
name = "sedsnet"
crate-type = ["rlib", "staticlib"]

[features]
default = ["std", "compression", "timesync", "discovery", "cryptography"]
std = ["serde", "serde/std", "serde_json", "serde_json/std"]
embedded = ["compression", "timesync", "discovery", "cryptography", "serde", "serde_json", "serde_json/alloc"]
python = ["std", "pyo3/extension-module", "pyo3/abi3-py38", "compression", "timesync", "discovery", "cryptography"]
compression = ["zstd-safe"]
timesync = []
discovery = []
cryptography = []

[package.metadata.maturin]
bindings = "pyo3"

[package.metadata.docs.rs]
features = ["std", "compression", "timesync", "discovery", "cryptography"]
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "rust-system-test"
path = "tests/rust-system-test/rust_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "full_system_test"
path = "tests/rust-system-test/full_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "rust_single_threaded_test"
path = "tests/rust-system-test/single_threaded_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "reliable_drop_test"
path = "tests/rust-system-test/reliable_drop_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "c-system-test"
path = "tests/c-system-test/c_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "timesync_system_test"
path = "tests/rust-system-test/timesync_system_test.rs"
required-features = ["std", "compression", "timesync"]

[[test]]
name = "compression_memory_pool_test"
path = "tests/rust-system-test/compression_memory_pool_test.rs"
required-features = ["std", "compression", "timesync"]

[[bench]]
name = "packet_paths"
harness = false

[[bench]]
name = "router_system_paths"
harness = false

[[bench]]
name = "route_selection_paths"
harness = false

[dependencies]
sedsnet_macros = { version = "2.0.0", path = "sedsnet_macros" }
crc32fast = { version = "1.5.0", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0.149", default-features = false, optional = true }

# Optional dependencies enabled by features
pyo3 = { version = "0.29.0", optional = true, features = ["auto-initialize", "extension-module", "multiple-pymethods"] }
zstd-safe = { version = "7.2.4", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.8.2"

# Release profile for standard builds, performance optimized
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

# Release profile for embedded builds, size optimized
[profile.release-embedded]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[profile.release-embedded.package."*"]
opt-level = "z"
debug = 0
strip = "symbols"
codegen-units = 1
incremental = false
overflow-checks = false
