[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sedsnet"
version = "4.0.0"
description = "Rust telemetry networking stack with routing, discovery, reliability, and C/Python bindings"
authors = [{ name = "Rylan Meilutis", email = "rylan.meilutis@gmail.com" }]
readme = "README.md"
license = "GPL-2"
requires-python = ">=3.8"


[tool.maturin]
bindings = "pyo3"
features = ["python", "timesync"]
python-source = "python-files"
include = [
    "python-files/sedsnet/sedsnet.pyi",
]
